--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -47,8 +47,17 @@ main {
 
 h1 {
   font-size: 1.1rem;
-  font-weight: 800;
-  margin: 0.67em 0;
+  font-weight: 700;
+  margin: 10px 0;
+}
+p {
+ font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 20px;
+
+color: #373A39;
 }
 
 /* Grouping content
@@ -654,25 +663,16 @@ transition: all .4s;
   color: black;
  /* margin-bottom: 5px;  */
 }
-p {
+/* p {
  font-family: 'Montserrat';
   font-style: normal;
   font-weight: 600;
   font-size: 10px;
-  line-height: 20px;
+  line-height: 15px;
 
 color: #373A39;
-}
-/* a {
-  color: gray;
-  text-decoration: none;
-  display: inline-block;
-}
-a:hover {
-  
-   color: tomato; 
-  cursor: pointer;
 } */
+
 
 .container {
   max-width: 1200px;
@@ -870,11 +870,11 @@ transition: all .4s;
 }
 
 .footer__inner {
-  max-width: 1200px;
+  max-width: 900px;
   width: 100%;
   margin: 0 auto;
   display: flex;
-   
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-start;
 
@@ -966,7 +966,7 @@ transition: all .4s;
  margin: 0 auto;
  display: flex;
  justify-content: center;
- align-items: center;
+ align-items: flex-start;
  flex-wrap: wrap;
 }
 .grid-products {
@@ -999,10 +999,10 @@ transition: all .4s;
 }
 
 .card {
- max-width: 290px;
+ max-width: 280px;
  width: 100%;
  /* border: 0.5px solid lightgrey; */
- padding: 5px;
+ padding: 0px;
  margin: 5px;
 }
 .heat__inner {
@@ -1310,6 +1310,9 @@ align-items: flex-start;
   text-indent: 100%;
   background: url('../img/up.png') no-repeat 0px 0px;
 
+}
+.text-center {
+  text-align: center;
 }
 /* media.css */
 
