--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -698,9 +698,8 @@ color: #373A39;
   right: 0;
   top: 0;
  
-  /* background-color: transparent; */
   background-color: #fff;
- 
+  box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Параметры тени */
   z-index: 1;
 }
 
@@ -709,11 +708,10 @@ color: #373A39;
     
     justify-content: space-between;
     align-items: center;
-   
-    /* background-color: transparent; */
+      
     background-color: #fff;
-  
-    /* margin: 0 auto; */
+    
+    
 }
 .slider {
   margin-top: 60px;
@@ -1314,6 +1312,151 @@ align-items: flex-start;
 .text-center {
   text-align: center;
 }
+/* radio */
+.custom-radio-text {
+ font-size: 20px;
+ 
+ font-weight: 400; 
+}
+.option {
+	display: block;
+	
+	margin-top: 0.1rem;
+	margin-bottom: 0.1rem;
+}
+.custom-radio-black {
+	position: relative;
+	vertical-align: text-center;
+	width: 16px;
+	height: 16px;
+    display: inline-block;
+	border-radius: 50%;
+	background: whitesmoke;
+	border: 2px solid black;
+    margin-right: 0.3rem;
+}
+.custom-radio-black-shelf {
+	position: relative;
+	vertical-align: text-center;
+	width: 16px;
+	height: 16px;
+    display: inline-block;
+	border-radius: 50%;
+	background: whitesmoke;
+	border: 2px solid whitesmoke;
+    margin-right: 0.3rem;
+}
+.custom-radio-white {
+	position: relative;
+	vertical-align: text-center;
+	width: 16px;
+	height: 16px;
+	display: inline-block;
+	border-radius: 50%;
+	background: whitesmoke;
+	border: 2px solid grey;
+    margin-right: 0.3rem;
+}
+.custom-radio-brown {
+	position: relative;
+	vertical-align: text-center;
+	width: 16px;
+	height: 16px;
+	display: inline-block;
+	border-radius: 50%;
+	background: whitesmoke;
+	border: 2px solid #3a0c02;
+    margin-right: 0.3rem;
+}
+.custom-radio-black-shelf::before {
+	content:'';
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	
+	width: 10px;
+	height: 10px;
+	display: inline-block;
+	border-radius: 50%;
+	background: black;
+	display: none;
+}
+.custom-radio-black::before {
+	content:'';
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	
+	width: 10px;
+	height: 10px;
+	display: inline-block;
+	border-radius: 50%;
+	background: black;
+	display: none;
+}
+.custom-radio-white::before {
+	content:'';
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	
+	width: 10px;
+	height: 10px;
+	display: inline-block;
+	border-radius: 50%;
+	background: white;
+	display: none;
+	
+}
+.custom-radio-brown::before {
+	content:'';
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	
+	width: 10px;
+	height: 10px;
+	display: inline-block;
+	border-radius: 50%;
+	background: #3a0c02;
+	display: none;
+	
+}
+.mb-5 {
+    margin-bottom: 5px;	
+}
+.real-radio-black:checked + .custom-radio-black::before {
+	display: inline-block;
+}
+.real-radio-black:checked + .custom-radio-black-shelf::before {
+	display: inline-block;
+}
+.real-radio-white:checked + .custom-radio-white::before {
+	display: inline-block;
+}
+.real-radio-brown:checked + .custom-radio-brown::before {
+	display: inline-block;
+}
+.real-radio-black {
+	position: absolute;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+}
+.real-radio-white {
+	position: absolute;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+}
+.real-radio-brown {
+	position: absolute;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+}
+/* radio */ 
 /* media.css */
 
 @media(max-width: 1100px){
