--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1063,7 +1063,7 @@ transition: all .4s;
 
 .slider-blog {
   background-color: rgba(4, 4, 4, 1);
-  padding: 15px 0;
+  padding: 10px 0;
 }
 .slider-blog__item {
   padding: 0;
@@ -1090,6 +1090,8 @@ transition: all .4s;
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  
+  
 }
 .slick-dots button {
 width: 16px;
@@ -1098,6 +1100,7 @@ height: 6px;
 border: none;
 background: #242121;
 font-size: 0;
+
 
 }
 .slick-active button {
@@ -1108,7 +1111,8 @@ border: none;
 background: tomato;
 
 }
-.slick-dots li + li {
+
+ li + li {
   margin-left: 10px;
 }
 
