--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -382,6 +382,7 @@ li {
   margin: 0;
   padding: 0;
   list-style: none;
+  text-align: left;
 }
 /* slick.css */
 /* Slider */
@@ -726,6 +727,7 @@ color: #373A39;
 
 .menu__list {
    display: flex;
+   justify-content: flex-start;
    
 }
 
@@ -790,9 +792,21 @@ transition: all .4s;
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color: transparent;
+    /* background-color: #f1f1f1; */
+    min-width: 150px;
+    /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.8); */
+      /* display: block; */
+  padding: 2px 0px;
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 700;
+font-size: 12px;
+line-height: 14px;
+
+color: grey;
+cursor: pointer; 
+transition: all .4s;
     z-index: 1;
 }
 .dropdown-submenu__list {
@@ -814,7 +828,7 @@ transition: all .4s;
   color: darkslategray;
 }
 .dropdown-content a:hover {
-  color: darkslategray;
+  color: tomato;
 }
 
 .dropdown-submenu__list + .dropdown-submenu__list {
