--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -98,6 +98,8 @@ a {
   text-decoration: none;
   display: inline-block;
   transition: all 0.3s;
+  margin: 0;
+  padding: 0;
 }
 a:hover {
   
@@ -620,7 +622,7 @@ color: grey;
 }
 .grey {
   
-  padding: 5px 0;
+  padding: 0px 0;
 font-family: 'Montserrat';
 font-style: normal;
 font-weight: 500;
@@ -1985,41 +1987,9 @@ align-items: center;
 .dummy08 {
     min-height: 40px;
 }
-/* .related-pag{
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 10px;
-  text-align: center;
-
-  .swiper-pagination-bullet {
-    border-radius: 0;
-    margin: 0 5px !important; 
-   
-    opacity: 1;
-    width: 16px;
-    height: 6px;
-    border: none;
-    background-color: #c3bbbb;
-  }
-
-  .swiper-pagination-bullet-active {
-    position: relative;
-    background-color: var(--color-dark);
-
-    opacity: 1;
-
-    // &::before {
-    //   content: "";
-    //   position: absolute;
-    //   left: 50%;
-    //   top: 50%;
-    //   z-index: -1;
-    //   border-radius: 100%;
-    //   width: 20px;
-    //   height: 20px;
-    //   background-color: #ccc;
-    //   transform: translate(-50%, -50%);
-    // }
-  }
-} */
+.loudspeakers {
+  height: 60px;
+}
+.ml-10 {
+  margin-left: 10px;
+}
