--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -737,7 +737,7 @@ color: #373A39;
 .menu__list-item {
   position: relative;
   display: inline-block;
-	padding: 15px 5px;
+	padding: 10px 5px;
 }
 
 
@@ -1758,10 +1758,12 @@ align-items: center;
   position: absolute;
   left: 0;
   right: 0;
-  top: 70px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5); 
+  top: 60px;
+  box-shadow: 0 0 2px rgba(0,0,0,0.5); 
 
   background-color: #fff;
+  border-top: 4px solid black;
+  border-bottom: 4px solid black;
   display: flex;
   flex-direction: column;
 
