--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -789,7 +789,7 @@ transition: all .4s;
 }
 .dropdown {
     position: relative;
-    display: block;
+    display: inline-block;
 }
 .dropdown-content {
     display: none;
@@ -799,16 +799,16 @@ transition: all .4s;
     min-width: 130px;
     /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.8); */
       /* display: block; */
-  padding: 5px 0px;
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 700;
-font-size: 12px;
-line-height: 14px;
+    padding: 5px 0px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 14px;
 
-color: grey;
-cursor: pointer; 
-transition: all .4s;
+    color: grey;
+    cursor: pointer; 
+    transition: all .4s;
     z-index: 1;
 }
 .dropdown-submenu__list {
