--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -617,6 +617,7 @@ li {
    url('../fonts/Montserrat-ExtraBold.woff') format('woff');
   font-display: swap;
 } */
+/*!END  normalize.css v8.0.1 | END  | github.com/necolas/normalize.css */
 * {
   box-sizing: border-box;
 }
