--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -933,7 +933,7 @@ transition: all .4s;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-start;
-
+  
 }
 
 .about__inner
@@ -1096,7 +1096,7 @@ transition: all .4s;
   padding: 10px 5px; 
 }
 .social-inner img{
-  width: 25px;
+    width: 25px;
     height: 25px;
     margin: 1px; 
 }
@@ -1376,7 +1376,7 @@ align-items: flex-start;
     display: block;
     
     width: 100%;
-    border-bottom: 0.5px solid #f1eded;
+    border-bottom: 1px solid DarkSlateGrey;
     padding-bottom: 5px;
   }
 .subscribe-form-black  input{
@@ -1688,6 +1688,147 @@ color: grey;
 	-webkit-appearance: none;
 	-moz-appearance: none;
 }
+.stepper-mini {
+  
+  display: flex;
+  align-items: center;
+  border: 2px solid #ccc;
+  height: 18px;
+    
+} 
+.stepper {
+  display: flex;
+
+  border: 2px solid #ccc;
+  height: 38px;
+} 
+.stepper__btn {
+    border: none;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 54px;
+    height: 100%;
+     &:hover {
+      svg {
+        fill: var(--color-dark);
+        transition: fill 0.3s;
+      }
+    }
+
+}
+/* .stepper__btn  svg {
+      display: block;
+      width: 12px;
+      height: 12px;
+      fill: var(--color-gray);
+      transition: fill 0.3s;
+    } */
+.product__content-box {
+    display: flex;
+    align-items: center;
+    
+
+}
+.card-info__btn38 {
+    margin-bottom: 5px;
+
+    width: 100%;
+    height: 40px;
+     font-weight: 500;
+      font-size: 12px;
+      line-height: 1.7px;
+    }
+.card-info__btn {
+    margin-bottom: 5px;
+
+    width: 100%;
+    height: 18px;
+    font-weight: 600;
+    font-size: 5px;
+    text-transform: uppercase;
+       @include xs380 {
+
+        width: 70%;
+      }
+    }
+.card-info__btn--tocart {
+      /* margin-bottom: 5px;
+
+    width: 100%;
+    height: 18px;
+    font-weight: 600;
+    font-size: 5px;
+    text-transform: uppercase; */
+    width: 100%;
+       @include xs380 {
+
+        width: 70%;
+      }
+    border: 2px solid black;
+    border-radius: 2px;
+    margin-top: 2px;
+    background-color: transparent;  
+    color: black;
+    /* background-color: #f2f2f2; */
+    transition: color 0.3s, background-color 0.3s;
+
+    &:hover {
+      color: white;
+      background-color: black;
+      transition: color 0.3s, background-color 0.3s;
+    }
+
+    /*  */
+      /* color: var(--color-white);
+      background-color: var(--color-dark);
+
+      &:hover {
+        color: var(--color-dark);
+        background-color: #f2f2f2;
+        transition: color 0.3s, background-color 0.3s;
+      } */
+    }
+.card-info__btn--towishlist {
+
+
+      color: var(--color-dark);
+      background-color: var(--color-white);
+      border: 0px solid #eee;
+      &:hover {
+        color: var(--color-white);
+        background-color: var(--color-dark);
+        transition: color 0.3s, background-color 0.3s;
+      }
+    }
+    /* &:hover {
+      svg {
+        fill: var(--color-dark);
+        transition: fill 0.3s;
+      }
+    } */
+
+    /* &--disabled {
+      opacity: 0.4;
+      pointer-events: none;
+    } */
+  
+
+.stepper__input {
+    flex-grow: 1;
+    border: none;
+    width: 100%;
+    height: 100%;
+    font-weight: 700;
+    font-size: 13px;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--color-dark);
+  }
+
 /* radio */ 
 /* media.css */
 
@@ -2025,6 +2166,11 @@ align-items: center;
   align-items: flex-start;
   margin-bottom: 10px; 
 }
+.product__content-box {
+    flex-wrap: wrap;
+
+}
+
 }
 
 .banners {
