--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -973,10 +973,13 @@ transition: all .4s;
  margin-top: 200px;
 }
 .about__cb {
- width: 300px;
- height: 200px;
+ max-width: 300px;
+ min-height: 200px;
  margin: 5px;
- margin-bottom: 200px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ 
 }
 .cell {
  max-width: 500px;
