--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -722,15 +722,7 @@ transition: all .4s;
   color: black;
  /* margin-bottom: 5px;  */
 }
-/* p {
- font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 10px;
-  line-height: 15px;
 
-color: #373A39;
-} */
 
 
 .container {
@@ -1195,9 +1187,9 @@ background: tomato;
 
 }
 
- li + li {
+ /* li + li {
   margin-left: 10px;
-}
+} */
 
 .team {
   padding: 80px 0 30px;
@@ -2228,7 +2220,7 @@ font-size: 14px;
 line-height: 10px;
 color: black;
 }
-
+/* button */
 
 .card__list-btn button {
 // display: inline-flex;
