--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -785,7 +785,7 @@ transition: all .4s;
 .menu__list-item {
   position: relative;
   display: inline-block;
-	padding: 10px 5px;
+	padding: 10px 10px;
 }
 
 
@@ -959,10 +959,12 @@ transition: all .4s;
  align-items: center;
 }
 .about__ca {
- width: 300px;
- height: 200px;
+ max-width: 300px;
+ min-height: 200px;
  margin: 5px;
- margin-top: 200px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
 }
 .about__cb {
  max-width: 300px;
@@ -1134,11 +1136,12 @@ transition: all .4s;
   margin-bottom: 10px;  
 }
 
-.slider-blog {
-  background-color: rgba(4, 4, 4, 1);
-  padding: 15px 0;
-  margin-top: 5px;
-}
+ .slider-blog {
+  width: 100%;
+  background-color: black;
+  padding: 0px 0;
+  margin-top: 0px;
+} 
 .slider-blog__item {
   padding: 0;
  
@@ -1249,7 +1252,7 @@ font-family: 'Montserrat';
 font-style: normal;
 font-weight: 800;
 font-size: 11px;
-line-height: 13px;
+line-height: 11px;
 padding: 17px 70px 15px;
 text-align: center;
 letter-spacing: 2px;
@@ -1331,6 +1334,7 @@ align-items: flex-start;
 .footer {
    
    background-color: black;
+   width: 100%;
  
 }
 .footer__bottom-wrap {
@@ -1682,20 +1686,14 @@ color: grey;
     }
 
 }
-/* .stepper__btn  svg {
-      display: block;
-      width: 12px;
-      height: 12px;
-      fill: var(--color-gray);
-      transition: fill 0.3s;
-    } */
+
 .product__content-box {
     display: flex;
     align-items: center;
     
 
 }
-.card-info__btn38 {
+/* .card-info__btn38 {
     margin-bottom: 5px;
 
     width: 100%;
@@ -1703,42 +1701,44 @@ color: grey;
      font-weight: 500;
       font-size: 12px;
       line-height: 1.7px;
-    }
+    } */
 .card-info__btn {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* margin-bottom: 5px; */
-
+    border: 2px solid #ccc;
+    border-radius: 2px;
     width: 100%;
     height: 18px;
-    font-weight: 600;
-    font-size: 5px;
+    font-weight: 800;
+    font-size: 7px;
     text-transform: uppercase;
-       @include xs380 {
-
-        width: 70%;
-      }
+        &:hover {
+      color: white;
+      border: 2px solid black;
+      background-color: black;
+      transition: color 0.3s, background-color 0.3s;
+    }
     }
 .card-info__btn--tocart {
-      /* margin-bottom: 5px;
+      margin-bottom: 5px;
 
     width: 100%;
-    height: 18px;
+    height: 40px;
     font-weight: 600;
-    font-size: 5px;
-    text-transform: uppercase; */
+    font-size: 12px;
+    
     width: 100%;
-       @include xs380 {
+       /* @include xs380 {
 
         width: 70%;
-      }
+      } */
     border: 2px solid black;
     border-radius: 2px;
     margin-top: 2px;
     background-color: transparent;  
     color: black;
-    /* background-color: #f2f2f2; */
+    
     transition: color 0.3s, background-color 0.3s;
 
     &:hover {
@@ -1760,12 +1760,12 @@ color: grey;
 .card-info__btn--towishlist {
 
 
-      color: var(--color-dark);
-      background-color: var(--color-white);
-      border: 0px solid #eee;
+      color: black;
+      background-color: white;
+      border: 1px solid #eee;
       &:hover {
-        color: var(--color-white);
-        background-color: var(--color-dark);
+        color: white;
+        background-color: black;
         transition: color 0.3s, background-color 0.3s;
       }
     }
@@ -1787,11 +1787,11 @@ color: grey;
     border: none;
     width: 100%;
     height: 100%;
-    font-weight: 700;
-    font-size: 13px;
+    font-weight: 800;
+    font-size: 10px;
     text-align: center;
     text-transform: uppercase;
-    color: var(--color-dark);
+    color: black;
   }
 
 /* radio */ 
@@ -1887,7 +1887,7 @@ align-items: center;
   display: block;
   
   }  
-  .clients__list {
+  /* .clients__list {
     min-height: 592px;
   display: flex;
   flex-wrap: wrap;
@@ -1899,9 +1899,7 @@ align-items: center;
   } 
   .slider-blog__item-title {
 
-  font-size: 16px;
-  line-height: 22px;
-  max-width: 304px;
+  
   }
   .slider-blog__item-text {
     max-width: 304px;
@@ -1912,20 +1910,20 @@ align-items: center;
   line-height: 20px;
 
 
-  }  
+  }   */
 
 
   .menu__list {
-  
+   
   position: absolute;
   left: 0;
-  right: 0;
-  top: 60px;
+  right: 30%;
+  top: 62px;
   box-shadow: 0 0 2px rgba(0,0,0,0.5); 
 
-  background-color: #fff;
-  border-top: 4px solid black;
-  border-bottom: 4px solid black;
+  background-color: rgba(255,255,255,0.95);
+  /* border-top: 4px solid black;
+  border-bottom: 4px solid black; */
   display: flex;
   flex-direction: column;
 
@@ -1940,7 +1938,7 @@ align-items: center;
     
   }
   ul.menu__list {
-    padding: 10px 0;
+    padding:  0px 0;
   }
    .menu__list-item {
   position: relative;
@@ -2169,89 +2167,104 @@ align-items: center;
 }
 /* --------------------------------------- */
 .card__top-line {
-max-width: 900px;
-width: 100%;    
-margin-bottom: 10px;
-display: flex;
+    max-width: 900px;
+    width: 100%;    
+    margin-bottom: 10px;
+    display: flex;
 
-justify-content: flex-start;
-align-items: center;
-@media screen and (max-width: 640px) {
+    justify-content: flex-start;
+    align-items: center;
+    @media screen and (max-width: 640px) {
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
     }
 }
 .card__label-search {
-display: flex;
-flex-wrap: nowrap;
-justify-content: space-between;
-align-items: center;  
-margin-bottom: 5px;
-font-style: normal;
-font-weight: 600;
-font-size: 14px;
-line-height: 20px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;  
+    margin-bottom: 5px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
 
-color: black;
+    color: black;
 
 
-margin-right: 10px;
+    margin-right: 10px;
 }
 .card__input-search {
-// display: inline-flex;
-// align-items: center; 
-margin-bottom: 5px; 
-max-width: 340px;
-width: 100%;
-height: 33px;
-margin-left: 10px;
-// background: #F0F0F4;
-border-radius: 3px;
-// padding: 0 37px 9px 17px;
-border: 0.5px solid lightgrey;
+
+        margin-bottom: 5px; 
+        max-width: 340px;
+        width: 100%;
+        height: 33px;
+        margin-left: 10px;
+
+        border-radius: 3px;
+
+        border: 0.5px solid lightgrey;
 
 }
 .card__label-p {
   margin-left: 10px;
-margin-bottom: 5px;
-font-weight: 600;
-font-size: 14px;
-line-height: 10px;
-color: black;
+    margin-bottom: 5px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 10px;
+    color: black;
 }
 /* button */
 
-.card__list-btn button {
-// display: inline-flex;
-// align-items: center;  
-width: 140px;
-height: 33px;
-background-color: black;
-border-radius: 3px;
+.card__list-btn {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;  
+    width: 200px;
+    margin-right: 10px;
+    padding: 5px 0;
+}
+.card__list-btn--btn {
+ display: flex;
+ justify-content: center; 
+    align-items: center;   
+    width: 180px;
+    height: 33px;
+    background-color: black;
+    border-radius: 3px;
 
-font-style: normal;
-font-weight: 500;
-font-size: 13px;
-// line-height: 16px;
-border: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+ line-height: 13px;
+    border: none;
 
-letter-spacing: 0.12em;
-
-padding: 9px 40px;
+    padding: 9px 10px;
 
 color: #FFFFFF;
 
 		}
- .card__list-btn:hover {
-//   display: inline-flex;
-// align-items: center;  
-width: 140px;
-height: 33px;
+ .card__list-btn--btn:hover {
+ /* display: flex;
+ justify-content: center;
+ align-items: center;  
+    width: 180px;
+    height: 33px; */
   background-color: #fff;
   color: black;
-
+    /* padding: 9px 10px;
+    border-radius: 3px; */
+    border: 2px solid black;
+    /* font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+ line-height: 13px; */
   transition: all 0.4s;
+  cursor: pointer;
  }
  .socialmap {
    margin: 0 auto;
@@ -2311,7 +2324,7 @@ height: 33px;
     color: black;
     padding: 2px 0;
     border-bottom: 0.5px solid #eee;
-@media screen and (max-width: 640px) {
+     @media screen and (max-width: 640px) {
     
      display: flex;
     flex-direction: column;
@@ -2340,9 +2353,9 @@ padding: 0px 0;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;  
-width: 150px;
-margin-right: 10px;
-padding: 5px 0;
+    width: 150px;
+    margin-right: 10px;
+    padding: 5px 0;
 		}
 
 .card__list-order-work{
@@ -2383,61 +2396,30 @@ width: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-/* // margin-right: 5px;
-// padding: 5px 0; */
+ margin-right: 5px;
+ padding: 5px 0; 
 		}
 
 .card__list-order-n{
-width: 50px;
+    width: 50px;
 
-padding: 0px 0;
-  img{
-    padding: 5px 0px;
-  }
+    padding: 0px 0;
+ 
 
 		}
 .card__list-n{
-width: 150px;
-display: inline-flex;
+    width: 150px;
+    display: inline-flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-// padding: 5px 0;
-  img{
-    padding: 5px 0px;
-  }
+     padding: 5px 0;
+
 
 		}
 
 
-.card__list-btn button{
-width: 120px;
-height: 33px;
-background-color: black;
-border-radius: 0px;
 
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 16px;
-border: none;
-
-letter-spacing: 0.12em;
-
-padding: 9px 10px;
-
-color: #FFFFFF;
-transition: all 0.3s;
-      cursor: pointer;
-
-     &:hover{
-      color: black;
-      background-color: transparent;
-      border: 2px solid black;
-      transition: all 0.3s;
-      cursor: pointer;
-     }
-		}
 .work span {
 display: block;
 padding-right: 10px;
