--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1887,32 +1887,7 @@ align-items: center;
   display: block;
   
   }  
-  /* .clients__list {
-    min-height: 592px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;  
-  }  
-  .team__items {
-    column-gap: 20px;
-  } 
-  .slider-blog__item-title {
-
-  
-  }
-  .slider-blog__item-text {
-    max-width: 304px;
-
-
-
-  font-size: 12px;
-  line-height: 20px;
-
-
-  }   */
-
-
+ 
   .menu__list {
    
   position: absolute;
@@ -2041,77 +2016,7 @@ align-items: center;
  .container-wrap {
   margin-left: 5px;
 }
- /* .project__inner, 
- 
- .cell {
-  display: block;
-  
-} */
 
-
-
-/* .pricing__item {
-width: 100%;
-margin: 5px;
-}  
-
- .clients__list {
-  min-height: 892px;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;  
-}
- .clients__list li {
-  margin-bottom: 40px;
-  padding: 10px; 
-}   
- .portfolio__content {
-  column-count: 1;
-  column-gap: 2px;
-} 
-.portfolio__numbers-item  {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}  
-.header__title {
-       font-size: 36px;
-    line-height: 15px;
-   
-}
-.header__subtitle {
-       font-size: 12px;
-    line-height: 14px;
-   }   
-.header__content {
-  margin: 0;
-  padding: 0;
- 
-}
-
-.expertise__item {
-  display: block;
- 
-  min-height: 340px;
-}
-.portfolio__top {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 100px; 
-}   
-.portfolio__btn {
-  display: block;
-  margin-right: 10px;
-  margin-left: 10px;
-}
-.team__item {
-  margin: 10px; 
-  padding: 10px;
-} */
 .footer__inner {
   flex-wrap: wrap;
 }
@@ -2166,6 +2071,9 @@ align-items: center;
   margin-left: 10px;
 }
 /* --------------------------------------- */
+.form-shop {
+    margin-bottom: 100px;
+}
 .card__top-line {
     max-width: 900px;
     width: 100%;    
@@ -2292,7 +2200,7 @@ color: #FFFFFF;
   margin: 0 auto;
   padding: 0 ;
   
-  max-width: 1170px;
+  /* max-width: 1170px; */
   width: 100%;
 } 
 // -------------------------------------------------------------------
